2008-07-06  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.variousStartPackets): Adjusted now that bug
	in pokeravatar.handlePacketLogic() on PACKET_POKER_START actions fixed.
	(PokerAvatarTestCase.requestsWithWrongSerial): Adjusted now that bug
	in pokeravatar.handlePacketLogic() on PACKET_POKER_START actions fixed.

2008-07-05  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerrenderer.py.in (PokerFactoryMockup.getMessages):
	Wrote method.
	(PokerFactoryMockup.message): Wrote method.
	(PokerFactoryMockup.clearMessages): Wrote method.
	(PokerFactoryMockup.__init__): Added call to clearMessages();
	Increased verbosity.

	* tests/test-pokerinteractor.py.in
	(PokerInteractorTestCase.test_highestBetIncreaseCancelCall): Added
	checks for output.
	(PokerFactoryMockup.getMessages): Wrote method.
	(PokerFactoryMockup.message): Wrote method.
	(PokerFactoryMockup.clearMessages): Wrote method.
	(PokerFactoryMockup.__init__): Added call to clearMessages.
	Increased verbosity.
	(PokerInteractorTestCase.test_errorFake): Wrote method.

2008-07-04  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-upgrade.py.in (UpgraderTestCase.test05_getUpgrader):
	Wrote method.
	(UpgraderTestCase.test06_upgradeReady): Wrote method.

2008-06-29  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-upgrade.py.in (UpgraderTestCase.test03_noNetwork):
	Wrote method.
	(UpgraderTestCase.test01_CheckClientVersionFailed1): Added check
	for output from checkClientVersion()
	(UpgraderTestCase.test04_hostNoRespond): Wrote method.
	(UpgraderMockup.spawn): Wrote method.

	* pokernetwork/upgrade.py (Upgrader.message): Wrote method; as
	support for Upgrader.error

	* pokernetwork/upgrade.py (Upgrader.error): Wrote method; it was missing.

	* tests/test-upgrade.py.in
	(PokerClientUpgradeCheckClientVersion.test01_CheckClientVersionRemote):
	Added check for message() output from CheckClientVersion.__init__